--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@bigcommerce/big-design-theme": "^0.15.0",
     "@bigcommerce/eslint-config": "^2.6.1",
     "@bigcommerce/request-sender": "^1.2.1",
+    "@tanstack/react-query": "^4.1.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,10 +15,12 @@
     "@types/node": "^16.11.49",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "msw": "^0.44.2",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
@@ -47,5 +50,8 @@
       "last 1 safari version"
     ]
   },
-  "prettier": "@bigcommerce/eslint-config/prettier"
+  "prettier": "@bigcommerce/eslint-config/prettier",
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
