--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@bigcommerce/big-design": "^0.32.1",
+    "@bigcommerce/big-design-icons": "^0.19.1",
     "@bigcommerce/big-design-theme": "^0.15.0",
     "@bigcommerce/eslint-config": "^2.6.1",
     "@bigcommerce/request-sender": "^1.2.1",
